fixed secondary button style and z-index

--- a/src/app/App.module.scss
+++ b/src/app/App.module.scss
@@ -96,8 +96,7 @@ body {
 }
 
 :global(.btn-secondary) {
-  background: #ffffff;
-  border: 2px solid $blue;
+  border: none;
   color: $blue;
   font-weight: 700;
 }
