--- a/src/app/components/commons/sideDescription/sideDescription.module.scss
+++ b/src/app/components/commons/sideDescription/sideDescription.module.scss
@@ -35,7 +35,7 @@ $transition: all 300ms ease-in-out;
     justify-content: center;
     border-radius: 100%;
     margin-left: 8px;
-    z-index: 10;
+    z-index: 30;
     cursor: pointer;
   }
 }
@@ -46,7 +46,7 @@ $transition: all 300ms ease-in-out;
 
 .show {
   opacity: 1;
-  z-index: 1;
+  z-index: 20;
 }
 
 .hide {
